--- a/admin.html
+++ b/admin.html
@@ -671,7 +671,33 @@
         <!-- Glass Header Navigation -->
         <header class="h-20 glass-header px-6 lg:px-10 flex items-center justify-between sticky top-0 z-20">
             <div class="flex items-center space-x-6">
-
+                <!-- Visitas Striking Counter -->
+                <div class="relative group">
+                    <div
+                        class="absolute -inset-1 bg-gradient-to-r from-brand-600 to-indigo-600 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000 group-hover:duration-200">
+                    </div>
+                    <div
+                        class="relative flex items-center bg-white border border-slate-100 rounded-2xl px-5 py-2.5 shadow-xl shadow-brand-500/5 overflow-hidden">
+                        <div
+                            class="flex items-center justify-center w-9 h-9 bg-brand-50 rounded-xl text-brand-600 mr-3 animate-pulse">
+                            <i class="fas fa-eye text-sm"></i>
+                        </div>
+                        <div class="flex flex-col">
+                            <span
+                                class="text-[9px] font-black text-slate-400 uppercase tracking-[0.2em] leading-none mb-1">Impacto
+                                Total</span>
+                            <div class="flex items-baseline space-x-1">
+                                <span id="visitCounter" class="text-lg font-black text-slate-900 leading-none">0</span>
+                                <span
+                                    class="text-[9px] font-bold text-brand-500 uppercase tracking-tighter">Views</span>
+                            </div>
+                        </div>
+                        <!-- Decorative element -->
+                        <div class="absolute -right-2 -bottom-2 opacity-5">
+                            <i class="fas fa-chart-line text-4xl rotate-12"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="flex items-center space-x-6">
