Se actualizo el logotipo

--- a/carrito.html
+++ b/carrito.html
@@ -47,9 +47,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="index.html" class="flex items-center hover:opacity-80 transition">
-                        <i class="fas fa-laptop-code text-3xl text-sky-600"></i>
-                        <span class="ml-2 text-2xl font-bold text-gray-800 dark:text-white">Solbin-X</span>
+                    <a href="index.html" class="flex items-center">
+                        <img src="Imagenes/Logotipo.png" alt="Solbin-X" class="h-10 w-auto">
                     </a>
                 </div>
                 <div class="hidden md:flex space-x-8 items-center">
@@ -249,8 +248,7 @@
             <div class="grid md:grid-cols-4 gap-8 mb-8">
                 <div>
                     <div class="flex items-center mb-4">
-                        <i class="fas fa-laptop-code text-3xl text-cyan-400"></i>
-                        <span class="ml-2 text-2xl font-bold">Solbin-X</span>
+                        <img src="Imagenes/Logotipo.png" alt="Solbin-X" class="h-10 w-auto brightness-0 invert">
                     </div>
                     <p class="text-gray-400 dark:text-gray-500">Tu tienda de confianza para equipos tecnológicos de
                         última generación.</p>
@@ -316,8 +314,7 @@
             <div
                 class="flex items-center justify-between px-4 py-3 bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700">
                 <div class="flex items-center gap-3">
-                    <div
-                        class="w-9 h-9 rounded-full bg-sky-600 flex items-center justify-center font-bold text-white">
+                    <div class="w-9 h-9 rounded-full bg-sky-600 flex items-center justify-center font-bold text-white">
                         S</div>
                     <div>
                         <div class="font-bold text-gray-800 dark:text-gray-100 leading-tight">Solbin</div>
@@ -357,4 +354,3 @@
 </body>
 
 </html>
-
