--- a/index.html
+++ b/index.html
@@ -428,23 +428,24 @@
         <div class="carousel-container w-full relative" style="aspect-ratio: 1200/350;">
             <!-- Slide 1 -->
             <div class="carousel-slide active">
-                <img src="Imagenes/Carrusel.png" alt="Catálogo 2026" class="w-full h-full object-cover">
+                <img src="Imagenes/Carrusel.png" alt="Catálogo 2026" class="w-full h-full object-cover"
+                    fetchpriority="high">
             </div>
             <!-- Slide 3 -->
             <div class="carousel-slide">
-                <img src="Imagenes/Carrucel3.png" alt="Promoción 3" class="w-full h-full object-cover">
+                <img src="Imagenes/Carrucel3.png" alt="Promoción 3" class="w-full h-full object-cover" loading="lazy">
             </div>
             <!-- Slide 4 -->
             <div class="carousel-slide">
-                <img src="Imagenes/Carrucel4.png" alt="Promoción 4" class="w-full h-full object-cover">
+                <img src="Imagenes/Carrucel4.png" alt="Promoción 4" class="w-full h-full object-cover" loading="lazy">
             </div>
             <!-- Slide 6 -->
             <div class="carousel-slide">
-                <img src="Imagenes/Carrucel6.png" alt="Promoción 6" class="w-full h-full object-cover">
+                <img src="Imagenes/Carrucel6.png" alt="Promoción 6" class="w-full h-full object-cover" loading="lazy">
             </div>
             <!-- Slide 7 -->
             <div class="carousel-slide">
-                <img src="Imagenes/Carrucel7.png" alt="Promoción 7" class="w-full h-full object-cover">
+                <img src="Imagenes/Carrucel7.png" alt="Promoción 7" class="w-full h-full object-cover" loading="lazy">
             </div>
 
             <!-- Carousel Navigation Dots -->
@@ -773,7 +774,7 @@
                 </div>
                 <div class="relative">
                     <video src="Video/Generar_video_de_segundos.mp4" class="rounded-2xl shadow-2xl w-full" playsinline
-                        controls></video>
+                        controls preload="metadata"></video>
                     <div class="absolute -bottom-6 -left-6 bg-sky-600 text-white p-6 rounded-xl shadow-xl">
                         <p class="text-3xl font-bold">8+</p>
                         <p class="text-sm">Años de Experiencia</p>
@@ -784,22 +785,23 @@
             <div class="mt-16 grid grid-cols-2 md:grid-cols-4 gap-8">
                 <div class="text-center">
                     <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=400&q=80" alt="Workspace"
-                        class="rounded-xl mb-4 w-full h-48 object-cover shadow-lg">
+                        class="rounded-xl mb-4 w-full h-48 object-cover shadow-lg" loading="lazy">
                     <h4 class="font-bold text-gray-800">Innovación</h4>
                 </div>
                 <div class="text-center">
                     <img src="https://images.unsplash.com/photo-1556656793-08538906a9f8?w=400&q=80" alt="Team"
-                        class="rounded-xl mb-4 w-full h-48 object-cover shadow-lg">
+                        class="rounded-xl mb-4 w-full h-48 object-cover shadow-lg" loading="lazy">
                     <h4 class="font-bold text-gray-800">Compromiso</h4>
                 </div>
                 <div class="text-center">
                     <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=400&q=80" alt="Analytics"
-                        class="rounded-xl mb-4 w-full h-48 object-cover shadow-lg">
+                        class="rounded-xl mb-4 w-full h-48 object-cover shadow-lg" loading="lazy">
                     <h4 class="font-bold text-gray-800">Calidad</h4>
                 </div>
                 <div class="text-center">
                     <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=400&q=80"
-                        alt="Customer Service" class="rounded-xl mb-4 w-full h-48 object-cover shadow-lg">
+                        alt="Customer Service" class="rounded-xl mb-4 w-full h-48 object-cover shadow-lg"
+                        loading="lazy">
                     <h4 class="font-bold text-gray-800">Servicio</h4>
                 </div>
             </div>
