--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,7 @@
                             950: '#172554',
                         },
                         ui: {
-                            sidebar: '#0f172a',
+                            sidebar: '#ffffff',
                             bg: '#f8fafc',
                             card: '#ffffff'
                         }
@@ -68,14 +68,15 @@
         }
 
         .sidebar-item.active {
-            background: linear-gradient(90deg, rgba(59, 130, 246, 0.15) 0%, rgba(59, 130, 246, 0) 100%);
-            color: #ffffff;
-            border-left: 4px solid #3b82f6;
+            background: linear-gradient(90deg, rgba(59, 130, 246, 0.08) 0%, rgba(59, 130, 246, 0.01) 100%);
+            color: #2563eb;
+            border-left: 4px solid #2563eb;
+            font-weight: 600;
         }
 
         .sidebar-item:hover:not(.active) {
-            background-color: rgba(255, 255, 255, 0.03);
-            color: #ffffff;
+            background-color: #f8fafc;
+            color: #2563eb;
         }
 
         .sidebar-item i {
@@ -601,20 +602,12 @@
 
     <!-- Sidebar Elite -->
     <aside
-        class="w-20 lg:w-64 bg-ui-sidebar text-slate-400 flex flex-col items-center lg:items-stretch transition-all duration-500 z-30 sticky top-0 h-screen shadow-2xl">
+        class="w-20 lg:w-64 bg-white text-slate-600 flex flex-col items-center lg:items-stretch transition-all duration-500 z-30 sticky top-0 h-screen border-r border-slate-200">
         <!-- Logo Branding -->
-        <div class="h-20 flex items-center px-4 lg:px-8 mb-10 mt-2">
-            <div class="flex items-center space-x-3 group cursor-pointer">
-                <div
-                    class="w-10 h-10 bg-brand-600 rounded-xl flex items-center justify-center text-white shadow-lg shadow-brand-500/30 group-hover:rotate-12 transition-transform duration-300">
-                    <i class="fas fa-bolt text-lg"></i>
-                </div>
-                <div class="hidden lg:block overflow-hidden">
-                    <p class="font-extrabold text-white text-xl tracking-tight">Solbin<span
-                            class="text-brand-500">-X</span></p>
-                    <p class="text-[10px] uppercase font-bold text-slate-500 tracking-[0.2em] leading-none">Management
-                    </p>
-                </div>
+        <div class="h-40 flex items-center justify-center p-6 mb-6">
+            <div class="flex items-center justify-center w-full transition-all duration-500 group">
+                <img src="Imagenes/Version_Web.svg" alt="Solbin-X Logo"
+                    class="h-24 w-auto max-w-full object-contain transition-transform duration-500 hover:scale-105 drop-shadow-[0_0_15px_rgba(59,130,246,0.2)]">
             </div>
         </div>
 
@@ -657,11 +650,11 @@
         </nav>
 
         <!-- System Actions -->
-        <div class="p-4 bg-slate-900/50 mt-auto border-t border-slate-800">
+        <div class="p-4 mt-auto border-t border-slate-100">
             <button id="logoutBtn"
-                class="w-full flex items-center justify-center py-3 rounded-xl text-red-500 hover:bg-red-500/10 transition-colors group">
-                <i class="fas fa-power-off lg:mr-3 group-hover:scale-110 transition"></i>
-                <span class="hidden lg:inline font-bold text-sm">Cerrar Sesión</span>
+                class="w-full flex items-center justify-center py-3 rounded-2xl text-slate-400 hover:text-red-600 hover:bg-red-50 transition-all duration-300 group">
+                <i class="fas fa-power-off lg:mr-3 group-hover:rotate-12 transition"></i>
+                <span class="hidden lg:inline font-bold text-xs uppercase tracking-widest">Cerrar Sesión</span>
             </button>
         </div>
     </aside>
