--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!-- SEO Meta Tags -->
     <title>Solbin-X | Venta de Laptops, Componentes y Accesorios Tecnológicos en Perú</title>
     <meta name="description"
-        content="Tienda de equipos tecnológicos en Perú. Laptops gaming, profesionales, tarjetas gráficas, teclados, monitores y más. Envío a todo el país. Garantía de 1 año. Soporte técnico 24/7.">
+        content="Compra Laptops, Componentes y Accesorios en Solbin-X. Los mejores precios en Gaming y Tecnología en Perú. Envíos Rápidos a todo el país y Garantía Total.">
     <meta name="keywords"
-        content="laptops peru, computadoras, tarjetas graficas, componentes pc, gaming peru, laptops lenovo, laptops asus, accesorios tecnologicos, tienda tecnologia lima, equipos informaticos">
+        content="venta de laptops, comprar pc gamer, laptops peru, computadoras, tarjetas graficas, componentes pc, gaming peru, laptops lenovo, laptops asus, accesorios tecnologicos, tienda tecnologia lima, equipos informaticos, solbin-x">
     <meta name="author" content="Solbin-X">
     <meta name="robots" content="index, follow">
     <meta name="language" content="Spanish">
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Solbin-X | Equipos Tecnológicos de Calidad en Perú">
     <meta property="og:description"
         content="Tu tienda de confianza para laptops, componentes gaming y accesorios tecnológicos. Envíos a todo el Perú. Garantía incluida.">
-    <meta property="og:image" content="https://solbin-x.com/Imagenes/Logotipo.png">
+    <meta property="og:image" content="https://solbin-x.com/Imagenes/Version_Web.png">
     <meta property="og:locale" content="es_PE">
     <meta property="og:site_name" content="Solbin-X">
 
@@ -38,11 +38,11 @@
     <meta name="twitter:title" content="Solbin-X | Equipos Tecnológicos de Calidad en Perú">
     <meta name="twitter:description"
         content="Tu tienda de confianza para laptops, componentes gaming y accesorios tecnológicos. Envíos a todo el Perú.">
-    <meta name="twitter:image" content="https://solbin-x.com/Imagenes/Logotipo.png">
+    <meta name="twitter:image" content="https://solbin-x.com/Imagenes/Version_Web.svg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="Imagenes/Logotipo.png">
-    <link rel="apple-touch-icon" href="Imagenes/Logotipo.png">
+    <link rel="icon" type="image/svg+xml" href="Imagenes/logo.svg">
+    <link rel="apple-touch-icon" href="Imagenes/logo.svg">
 
     <!-- Geo Tags -->
     <meta name="geo.region" content="PE">
@@ -61,7 +61,7 @@
         "name": "Solbin-X",
         "description": "Tienda de equipos tecnológicos en Perú. Laptops, componentes gaming, accesorios y más.",
         "url": "https://solbin-x.com",
-        "logo": "https://solbin-x.com/Imagenes/Logotipo.png",
+        "logo": "https://solbin-x.com/Imagenes/Version_Web.png",
         "image": "https://solbin-x.com/Imagenes/Carrusel.png",
         "telephone": "+51945297289",
         "email": "ventas@solbin-x.com",
@@ -352,10 +352,11 @@
     <!-- Navegación -->
     <nav class="bg-white dark:bg-gray-900 shadow-lg fixed w-full top-0 z-50 transition-colors duration-300">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center h-16">
+            <div class="flex justify-between items-center h-32">
                 <div class="flex items-center">
                     <a href="#inicio" class="flex items-center">
-                        <img src="Imagenes/Logotipo.png" alt="Solbin-X" class="h-10 w-auto">
+                        <img src="Imagenes/Version_Web.svg" alt="Solbin-X"
+                            class="h-24 w-auto dark:brightness-0 dark:invert transition-all duration-300 hover:scale-110">
                     </a>
                 </div>
                 <div class="hidden md:flex space-x-8 items-center">
@@ -423,7 +424,8 @@
     </nav>
 
     <!-- Landing Page / Hero Section - Banner Style -->
-    <section id="inicio" class="relative pt-16 overflow-hidden">
+    <section id="inicio" class="relative pt-36 overflow-hidden">
+        <h1 class="sr-only">Solbin-X: Venta de Laptops, Componentes y Accesorios Tecnológicos en Perú</h1>
         <!-- Carousel Container - Adapts to image proportions -->
         <div class="carousel-container w-full relative" style="aspect-ratio: 1200/350;">
             <!-- Slide 1 -->
@@ -433,19 +435,23 @@
             </div>
             <!-- Slide 3 -->
             <div class="carousel-slide">
-                <img src="Imagenes/Carrucel3.png" alt="Promoción 3" class="w-full h-full object-cover" loading="lazy">
+                <img src="Imagenes/Carrucel3.png" alt="Oferta de Laptops Gaming y Profesionales"
+                    class="w-full h-full object-cover" loading="lazy">
             </div>
             <!-- Slide 4 -->
             <div class="carousel-slide">
-                <img src="Imagenes/Carrucel4.png" alt="Promoción 4" class="w-full h-full object-cover" loading="lazy">
+                <img src="Imagenes/Carrucel4.png" alt="Accesorios para PC y Periféricos"
+                    class="w-full h-full object-cover" loading="lazy">
             </div>
             <!-- Slide 6 -->
             <div class="carousel-slide">
-                <img src="Imagenes/Carrucel6.png" alt="Promoción 6" class="w-full h-full object-cover" loading="lazy">
+                <img src="Imagenes/Carrucel6.png" alt="Componentes de Computadora y Hardware"
+                    class="w-full h-full object-cover" loading="lazy">
             </div>
             <!-- Slide 7 -->
             <div class="carousel-slide">
-                <img src="Imagenes/Carrucel7.png" alt="Promoción 7" class="w-full h-full object-cover" loading="lazy">
+                <img src="Imagenes/Carrucel7.png" alt="Monitores y Equipos de Alta Gama"
+                    class="w-full h-full object-cover" loading="lazy">
             </div>
 
             <!-- Carousel Navigation Dots -->
@@ -1109,7 +1115,7 @@
                     class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-8 card-hover transition-colors duration-300 scale-up">
                     <div class="flex items-center mb-4">
                         <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100&q=80"
-                            alt="María Rodríguez" class="w-16 h-16 rounded-full object-cover">
+                            alt="María Rodríguez" class="w-16 h-16 rounded-full object-cover" loading="lazy">
                         <div class="ml-4">
                             <h4 class="font-bold text-lg text-gray-800 dark:text-white">María Rodríguez</h4>
                             <div class="flex text-yellow-400">
@@ -1130,7 +1136,7 @@
                     class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-8 card-hover transition-colors duration-300">
                     <div class="flex items-center mb-4">
                         <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&q=80"
-                            alt="Juan García" class="w-16 h-16 rounded-full object-cover">
+                            alt="Juan García" class="w-16 h-16 rounded-full object-cover" loading="lazy">
                         <div class="ml-4">
                             <h4 class="font-bold text-lg text-gray-800 dark:text-white">Juan García</h4>
                             <div class="flex text-yellow-400">
@@ -1151,7 +1157,7 @@
                     class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-8 card-hover transition-colors duration-300">
                     <div class="flex items-center mb-4">
                         <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=100&q=80"
-                            alt="Ana Pérez" class="w-16 h-16 rounded-full object-cover">
+                            alt="Ana Pérez" class="w-16 h-16 rounded-full object-cover" loading="lazy">
                         <div class="ml-4">
                             <h4 class="font-bold text-lg text-gray-800 dark:text-white">Ana Pérez</h4>
                             <div class="flex text-yellow-400">
@@ -1211,7 +1217,7 @@
                     class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-8 card-hover transition-colors duration-300">
                     <div class="flex items-center mb-4">
                         <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=100&q=80"
-                            alt="Roberto Sánchez" class="w-16 h-16 rounded-full object-cover">
+                            alt="Roberto Sánchez" class="w-16 h-16 rounded-full object-cover" loading="lazy">
                         <div class="ml-4">
                             <h4 class="font-bold text-lg text-gray-800 dark:text-white">Roberto Sánchez</h4>
                             <div class="flex text-yellow-400">
@@ -1398,7 +1404,8 @@
                 <div>
                     <div class="mb-4">
                         <a href="#inicio">
-                            <img src="Imagenes/Logotipo.png" alt="Solbin-X" class="h-12 w-auto">
+                            <img src="Imagenes/Version_Web.svg" alt="Solbin-X"
+                                class="h-32 w-auto brightness-0 invert transition-all duration-300 hover:opacity-80">
                         </a>
                     </div>
                     <p class="text-gray-400 dark:text-gray-500">Tu tienda de confianza para equipos tecnológicos de
