--- a/login.html
+++ b/login.html
@@ -25,8 +25,9 @@
 
     <div class="glass w-full max-w-md p-8 rounded-2xl shadow-2xl">
         <div class="text-center mb-8">
-            <div class="inline-block p-4 rounded-full bg-sky-100 text-sky-600 mb-4">
-                <i class="fas fa-user-shield text-3xl"></i>
+            <div class="mb-6 flex justify-center">
+                <img src="Imagenes/Version_Web.svg" alt="Solbin-X"
+                    class="h-48 w-auto drop-shadow-2xl transition-transform duration-500 hover:scale-105">
             </div>
             <h1 class="text-2xl font-bold text-gray-800">Panel de Administración</h1>
             <p class="text-gray-500">Ingresa tus credenciales para continuar</p>
