feat: Introduce new pages, carousel, and service worker features, alongside new image assets and updates to core scripts and HTML.l

--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Administración - Solbin-X</title>
+    <link rel="icon" type="image/svg+xml" href="Imagenes/FavIcon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="supabase-config.js"></script>
@@ -27,7 +28,7 @@
         <div class="text-center mb-8">
             <div class="mb-6 flex justify-center">
                 <img src="Imagenes/Version_Web.svg" alt="Solbin-X"
-                    class="h-48 w-auto drop-shadow-2xl transition-transform duration-500 hover:scale-105">
+                    class="h-[229px] w-auto drop-shadow-2xl transition-transform duration-500 hover:scale-105">
             </div>
             <h1 class="text-2xl font-bold text-gray-800">Panel de Administración</h1>
             <p class="text-gray-500">Ingresa tus credenciales para continuar</p>
@@ -62,13 +63,13 @@
                 class="hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative text-sm"></div>
 
             <button type="submit"
-                class="w-full bg-sky-600 text-white font-bold py-3 px-4 rounded-lg hover:bg-sky-700 transition transform hover:-translate-y-1 shadow-lg">
+                class="w-full bg-[#0D9488] text-white font-bold py-3 px-4 rounded-lg hover:bg-[#0F766E] transition transform hover:-translate-y-1 shadow-lg">
                 Iniciar Sesión
             </button>
         </form>
 
         <div class="mt-8 pt-6 border-t border-gray-200 text-center">
-            <a href="index.html" class="text-sm text-gray-500 hover:text-sky-600 transition">
+            <a href="index.html" class="text-sm text-gray-500 hover:text-[#0D9488] transition">
                 <i class="fas fa-arrow-left mr-1"></i> Volver a la tienda
             </a>
         </div>
