--- a/admin.html
+++ b/admin.html
@@ -63,8 +63,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/i18n/grid.locale-es.js"></script>
 
     <!-- GridJS -->
-    <link href="https://cdn.jsdelivr.net/npm/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/gridjs/dist/gridjs.umd.production.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/gridjs@6.2.0/dist/theme/mermaid.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/gridjs@6.2.0/dist/gridjs.umd.min.js"></script>
+    <script>
+        // Verificar que GridJS esté cargado inmediatamente
+        window.addEventListener('DOMContentLoaded', function() {
+            console.log('GridJS status check:', typeof gridjs !== 'undefined' ? 'CARGADO' : 'NO CARGADO');
+            if (typeof gridjs === 'undefined' && typeof window.gridjs !== 'undefined') {
+                window.gridjs = window.gridjs;
+                console.log('GridJS asignado a window.gridjs');
+            }
+        });
+    </script>
     <style>
         body {
             background-color: #f8fafc;
