--- a/admin.html
+++ b/admin.html
@@ -65,6 +65,7 @@
     <!-- GridJS -->
     <link href="https://cdn.jsdelivr.net/npm/gridjs@6.2.0/dist/theme/mermaid.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/gridjs@6.2.0/dist/gridjs.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gridjs@6.2.0/dist/i18n/es.min.js"></script>
     <script>
         // Verificar que GridJS esté cargado inmediatamente
         window.addEventListener('DOMContentLoaded', function() {
